test/files/neg/t3757.check
B.scala:4: error: method foo overrides nothing
  override def foo = "B"
               ^
1 error
